tests/baselines/reference/parser642331_1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser642331_1.ts (1 errors) ====
    "use strict";
    
    class test {
        constructor (static) { }
                     ~~~~~~
!!! error TS1003: Identifier expected.
    }
    